@@ -1,9 +1,9 @@
 package com.store.springboot_ecommerce.service;
 
+import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
+
 import org.springframework.stereotype.Service;
 
 import com.store.springboot_ecommerce.dto.CartItemDto;
@@ -13,29 +13,37 @@ import com.store.springboot_ecommerce.model.Product;
 import com.store.springboot_ecommerce.model.User;
 import com.store.springboot_ecommerce.repository.CartItemRepo;
 import com.store.springboot_ecommerce.repository.ProductRepo;
+import com.store.springboot_ecommerce.repository.UserRepo;
 
 import jakarta.transaction.Transactional;
+import lombok.RequiredArgsConstructor;
 
 @Service
+@RequiredArgsConstructor
 public class CartService {
 
-    @Autowired
-    private CartItemRepo cartItemRepo;
+    private final CartItemRepo cartItemRepo;
 
-    @Autowired
-    private ProductRepo productRepo;
+    private final UserRepo userRepo ;
 
-   
+    private final ProductRepo productRepo;
 
-  
 
+
+    // add item to cart
     @Transactional
-    public CartItem addItemToCart(long productId ,int requestQuantity ,User user ){
+    public CartItemDto addItemToCart(long productId ,int requestQuantity ,User user ){
+
+        if(user == null  || user.getId() == null || user.getId() == 0){
+            throw new RuntimeException("user is not authenticated or userId is missing");
+        }
+        User managedUser = userRepo.findById(user.getId())
+                        .orElseThrow(()-> new RuntimeException("user id not found"));
 
         Product product = productRepo.findById(productId)
-                          .orElseThrow(() -> new RuntimeException("product not found"));
+                    .orElseThrow(() -> new RuntimeException("product not found"));
 
-        CartItem existingItem = cartItemRepo.findByUserAndProduct(user, product);
+                CartItem existingItem = cartItemRepo.findByUserAndProduct(managedUser, product);
 
         int currentInCart = (existingItem == null) ? 0 : existingItem.getQuantity();
         int availableToBuy = product.getStock() - currentInCart;
@@ -48,18 +56,27 @@ public class CartService {
             }
         }
 
-        
+        CartItem savedItem;
+
         if( existingItem != null){
-             existingItem.setQuantity(currentInCart + requestQuantity);
-             return cartItemRepo.save(existingItem);
+            existingItem.setQuantity(currentInCart + requestQuantity);
+            savedItem = cartItemRepo.save(existingItem);
+
         }else{
-            CartItem newItem = new CartItem( user , product , requestQuantity);
-            return cartItemRepo.save(newItem);
+            CartItem newItem = new CartItem();
+            newItem.setUser(managedUser);
+            newItem.setProduct(product);
+            newItem.setQuantity(requestQuantity);
+            savedItem = cartItemRepo.save(newItem);
         }
+        return new CartItemDto(savedItem);
     }
 
-    public List<CartItem> getCartItems(User user){
-        return cartItemRepo.findByUser(user);
+    // cartItems
+    @Transactional
+    public List<CartItemDto> getCartItems(User user){
+            return  cartItemRepo.findByUser(user)
+            .stream().map(CartItemDto::new).toList();
         }
 
         @Transactional
@@ -77,21 +94,13 @@ public class CartService {
         CartResponseDto cartResponse = new CartResponseDto();
         cartResponse.setUserName(user.getUserName());
         cartResponse.setEmail(user.getEmail());
-        
-        List<CartItemDto> itemDtos = cartItems.stream().map(item -> {
 
-            CartItemDto dto = new CartItemDto();
-            dto.setName(item.getProduct().getName());
-            dto.setPrice(item.getProduct().getPrice().doubleValue());
-            dto.setQuantity(item.getQuantity());
-            dto.setProductId(item.getProduct().getId());
-            return dto;
-        }).collect(Collectors.toList());
+        List<CartItemDto> itemDtos = cartItems.stream().map(CartItemDto::new).toList();
         cartResponse.setItems(itemDtos);
 
-        double total = cartItems.stream()
-        .mapToDouble(item -> item.getProduct().getPrice().doubleValue() * item.getQuantity())
-        .sum();
+        BigDecimal total = cartItems.stream()
+        .map(item -> item.getProduct().getPrice().multiply(BigDecimal.valueOf(item.getQuantity())) )
+        .reduce(BigDecimal.ZERO , BigDecimal::add);
 
         cartResponse.setTotalCartPrice(total);
 
@@ -101,15 +110,16 @@ public class CartService {
 
 
     @Transactional
-    public CartItem updateQuantity(long itemId , int quantity){
+    public CartItemDto updateQuantity(long itemId , int quantity){
         CartItem item = cartItemRepo.findById(itemId)
                         .orElseThrow(() -> new RuntimeException("item not found"));
-        
+
         if(quantity > item.getProduct().getStock()){
             throw new RuntimeException("unavailable , available for now : " + item.getProduct().getStock());
         }
         item.setQuantity(quantity);
-        return cartItemRepo.save(item);
+        CartItem updatedItem = cartItemRepo.save(item);
+        return new CartItemDto(updatedItem);
 
     }
 
